--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "main": "lib/assets.js",
   "dependencies": {
     "connect-file-cache": "0.2.4",
-    "snockets": "1.3.8"
+    "snockets": "git+ssh://git@github.com:pthrasher/snockets.git#47477c3f6ea859b13f71587d742b63b57aadff87"
   },
   "devDependencies": {
     "async": "0.1.14",
